# dsksoftkit

./: .gitignore  README.md  package.py
python/: __init__.py
python/dsk/: __init__.py
python/dsk/base/: __init__.py
python/dsk/base/app/: browser_app.py  browser_dialog.py  custom_menu.py  main_window_helper.py
python/dsk/base/conn_helper/: login.py  sgtk_mapping.py  sgtk_utils.py  shotgun_startup.py
python/dsk/base/db_helper/: __init__.py  asset_info_db.py  assetlist_info_db.py  basemedia_info_db.py  db_cache.py  db_helper_funct.py  dept_info_db.py  path_cache.py  pf_info_db.py  pft_info_db.py  pipeconfig_info_db.py  scrroom_info_db.py  shot_info_db.py  (+9 more)
python/unittest/: setup.cfg
python/unittest/utest_baseutils/: test_filesystem.py
python/unittest/utest_envi/: test_a_release.py  test_config_api.py  test_envi.py  test_envi_info_edit.py  test_prodenv.py
python/unittest/utest_launch/: test_maya_tank_launch.py  test_mayalaunch.py  test_mayapylaunch.py
python/unittest/utest_pathconfig/: test_version_type.py
python/unittest/utest_qt/: test_container.py
python/unittest/utest_shotgun/: test_media_query.py  test_simple_query.py
python/unittest/utest_tank/: test_config_schema.py  test_configpipeline_release.py
python/unittest/utest_taskdata/: foo.py  foo2.py  test_simple_taskdata.py  test_taskdata_api.py
python/unittest/utest_yaml/: data.yml  envi_info.yml  test_basic_yaml.py
src/watchman/: CMakeLists.txt  NOTES.txt  wm_chmod.c  wm_cp.c  wm_ln.c  wm_mkdir.c  wm_mv.c  wm_publish.c  wm_publish.h  wm_rm.c  wm_rmdir.c
test/test_git/: test_gitutils.py
(+181 files in other folders)
